--- a/Bouncing Video/videoClipPath.html
+++ b/Bouncing Video/videoClipPath.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bouncing Video: Animating and Masking HTML5 Video</title>
+    <title>Video element bounce</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body onLoad="init();">
 
-    <video id="vid" loop="loop" preload="auto" muted>
-        <source src="Images/joshuahomerun.mp4" type="video/mp4; codecs='avc1.42E01E, mp4a.40.2'">
-        <source src="Images/joshuahomerun.webmvp8.webm" type='video/webm; codec="vp8, vorbis"'>
+    <video id="vid" loop="loop" preload="auto" autoplay muted>
+
+        <source src="images/joshuahomerun.webmvp8.webm" type='video/webm; codec="vp8, vorbis"'>
+        <source src="Images/joshuahomerun.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         <source src="Images/joshuahomerun.theora.ogv" type='video/ogg; codecs="theora, vorbis"'>
 
         Your browser does not accept the video tag.
@@ -22,7 +23,17 @@
     <canvas id="canvas">
         This browser doesn't support the HTML5 canvas element.
     </canvas>
-    <script src="script.js"></script>
+
+
 </body>
+
+
+
+<!-- <script>
+    setInterval(function () {
+        location.reload();
+    }, 2000);
+</script> -->
+<script src="script._2.js"></script>
 
 </html>
